--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  pool: 10
+  host: localhost
+  user: postgres
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: crypto_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: crypto_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: /run/postgresql/.s.PGSQL.5432
+  pool: 40
+  database: crypto_production
